gatekeeper/constraints/disallow-root-user.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: disallow-root-user
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    namespaces: ["demo", "payments"]
  parameters:
    runAsUser:
      rule: MustRunAsNonRoot
