gatekeeper/constraints/require-resource-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: require-resource-limits
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    namespaces: ["demo"]
  parameters:
    limits:
    - cpu
    - memory
